# BRAIC

./: .gitignore  kk.py  main.py  pyproject.toml
data/: 三相三线标准配置计量装置接线作业_final.json  低压三相四线标准配置计量装置接线判别与更正作业_final.json  低压三相四线标准配置计量装置新装接线作业_final.json  低压三相四线电能表运行状态作业_final.json  电能表接线测量及六角图绘制作业_0703版本.json  程序性知识提示词.md  训练数据-三相三线标准配置计量装置接线作业.xlsx  训练数据-低压三相四线标准配置计量装置接线判别与更正作业.xlsx  训练数据-低压三相四线标准配置计量装置新装接线作业.xlsx  训练数据-低压三相四线电能表运行状态作业.xlsx  训练数据-电能表接线测量及六角图绘制作业-0703版本.xlsx  陈述性知识提示词.md
html/: index.html
requirements/: 数据库设计.md
src/: config.py
src/api/: ApiModel.py  base.py  demo.py
src/api/ai/: chat.py
src/api/docs/: doc.py
src/data/db/: sqlinit.py  sqlite.db
src/data/docs/: 1.doc  2.doc
src/services/: exec_services.py  file_services.py
src/services/ai/: chat_models.py  chat_service.py  llm.py
src/utils/: finetune.py  kkutils.py  sqlite_utils.py
templates/jinja2/: index.html
