[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.28",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
